--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 pip
 Sphinx==4.5.0
 blurb
-Pygments<2.15
+Pygments==2.16.1
 PyICU
 polib
 pospell>=1.1
 potodo
 powrap
-python-docs-theme
+python-docs-theme>=2022.1
 setuptools
 sphinx-intl
 pre-commit
